--- a/akteerimine/src/main/resources/config/application.yml
+++ b/akteerimine/src/main/resources/config/application.yml
@@ -123,6 +123,8 @@ spring:
   output:
     ansi:
       console-available: true
+  activemq:
+    broker-url: tcp://localhost:61616
 
 server:
   servlet:
