--- a/lepinguregister/src/main/resources/config/application.yml
+++ b/lepinguregister/src/main/resources/config/application.yml
@@ -92,6 +92,8 @@ management:
 spring:
   application:
     name: lepinguregister
+  activemq:
+    broker-url: tcp://localhost:61616
   profiles:
     # The commented value for `active` can be replaced with valid Spring profiles to load.
     # Otherwise, it will be filled in by gradle when building the JAR file
