--- a/lepinguregister/src/main/resources/config/application-prod.yml
+++ b/lepinguregister/src/main/resources/config/application-prod.yml
@@ -26,6 +26,8 @@ management:
         enabled: false
 
 spring:
+  activemq:
+    broker-url: tcp://host.docker.internal:61616
   devtools:
     restart:
       enabled: false
