--- a/akteerimine/src/main/resources/config/application-dev.yml
+++ b/akteerimine/src/main/resources/config/application-dev.yml
@@ -46,16 +46,16 @@ server:
 
 jhipster:
   # CORS is only enabled by default with the "dev" profile
-  cors:
-    # Allow Ionic for JHipster by default (* no longer allowed in Spring Boot 2.4+)
-    allowed-origins: 'http://localhost:8100,https://localhost:8100,http://localhost:9000,https://localhost:9000,http://localhost:4200,https://localhost:4200'
-    # Enable CORS when running in GitHub Codespaces
-    allowed-origin-patterns: 'https://*.githubpreview.dev'
-    allowed-methods: '*'
-    allowed-headers: '*'
-    exposed-headers: 'Link,X-Total-Count,X-${jhipster.clientApp.name}-alert,X-${jhipster.clientApp.name}-error,X-${jhipster.clientApp.name}-params'
-    allow-credentials: true
-    max-age: 1800
+#  cors:
+#    # Allow Ionic for JHipster by default (* no longer allowed in Spring Boot 2.4+)
+#    allowed-origins: 'http://localhost:8100,https://localhost:8100,http://localhost:9000,https://localhost:9000,http://localhost:4200,https://localhost:4200,'
+#    # Enable CORS when running in GitHub Codespaces
+#    allowed-origin-patterns: 'https://*.githubpreview.dev'
+#    allowed-methods: '*'
+#    allowed-headers: '*'
+#    exposed-headers: 'Link,X-Total-Count,X-${jhipster.clientApp.name}-alert,X-${jhipster.clientApp.name}-error,X-${jhipster.clientApp.name}-params'
+#    allow-credentials: true
+#    max-age: 1800
   security:
     remember-me:
       # security key (this key should be unique for your application, and kept secret)
