Mail config, fixes

--- a/lepinguregister/package.json
+++ b/lepinguregister/package.json
@@ -83,9 +83,13 @@
     "@fortawesome/fontawesome-svg-core": "6.2.0",
     "@fortawesome/free-solid-svg-icons": "6.2.0",
     "@ng-bootstrap/ng-bootstrap": "13.0.0",
+    "@ngx-translate/core": "14.0.0",
+    "@ngx-translate/http-loader": "7.0.0",
     "@popperjs/core": "2.11.6",
     "bootstrap": "5.2.0",
     "dayjs": "1.11.5",
+    "folder-hash": "^4.0.4",
+    "merge-jsons-webpack-plugin": "^2.0.1",
     "ngx-infinite-scroll": "14.0.0",
     "ngx-webstorage": "10.0.1",
     "rxjs": "7.5.6",
