--- a/lepinguregister/src/main/resources/config/application-prod.yml
+++ b/lepinguregister/src/main/resources/config/application-prod.yml
@@ -47,10 +47,16 @@ spring:
   liquibase:
     contexts: prod
   mail:
-    host: localhost
-    port: 25
-    username:
-    password:
+    host: smtp.gmail.com
+    port: 587
+    username: helmes.proov@gmail.com
+    password: Assei88assbttyQQ!
+    protocol: smtp
+    tls: true
+    properties.mail.smtp:
+      auth: true
+      starttls.enable: true
+      ssl.trust: smtp.gmail.com
   thymeleaf:
     cache: true
 
