--- a/lepinguregister/src/main/resources/config/application-dev.yml
+++ b/lepinguregister/src/main/resources/config/application-dev.yml
@@ -47,7 +47,7 @@ spring:
     host: smtp.gmail.com
     port: 587
     username: helmes.proov@gmail.com
-    password: Assei88assbttyQQ!
+    password: mmaagzkqgeqijrjc
     protocol: smtp
     tls: true
     properties.mail.smtp:
