Readme updates, final changes.

--- a/akteerimine/.yo-rc.json
+++ b/akteerimine/.yo-rc.json
@@ -17,7 +17,7 @@
     "dtoSuffix": "DTO",
     "enableGradleEnterprise": false,
     "enableHibernateCache": false,
-    "enableSwaggerCodegen": false,
+    "enableSwaggerCodegen": true,
     "enableTranslation": true,
     "entitySuffix": "",
     "jhiPrefix": "jhi",
