--- a/lepinguregister/src/main/resources/config/application-prod.yml
+++ b/lepinguregister/src/main/resources/config/application-prod.yml
@@ -110,6 +110,9 @@ jhipster:
       host: localhost
       port: 5000
       queue-size: 512
+  swagger:
+    enabled:
+      true
 # ===================================================================
 # Application specific properties
 # Add your own application properties here, see the ApplicationProperties class
