--- a/akteerimine/src/main/resources/config/application-prod.yml
+++ b/akteerimine/src/main/resources/config/application-prod.yml
@@ -94,3 +94,5 @@ jhipster:
 # ===================================================================
 
 # application:
+lepinguregister:
+  base-url: http://host.docker.internal:8080
