--- a/akteerimine/src/main/docker/app.yml
+++ b/akteerimine/src/main/docker/app.yml
@@ -8,7 +8,8 @@ services:
       - SPRING_PROFILES_ACTIVE=prod,api-docs
       - MANAGEMENT_METRICS_EXPORT_PROMETHEUS_ENABLED=true
       - JHIPSTER_SLEEP=30 # gives time for other services to boot before the application
+      - lepinguregister.base-url=http://host.docker.internal:8080
     # If you want to expose these ports outside your dev PC,
     # remove the "127.0.0.1:" prefix
     ports:
-      - 127.0.0.1:8081:8081
+      - 8081:8081
