--- a/akteerimine/src/main/resources/config/application.yml
+++ b/akteerimine/src/main/resources/config/application.yml
@@ -183,3 +183,5 @@ jhipster:
 # ===================================================================
 
 # application:
+lepinguregister:
+  base-url: http://localhost:8080
