--- a/lepinguregister/src/main/resources/config/application-prod.yml
+++ b/lepinguregister/src/main/resources/config/application-prod.yml
@@ -27,7 +27,7 @@ management:
 
 spring:
   activemq:
-    broker-url: tcp://localhost:61616
+    broker-url: tcp://host.docker.internal:61616
   devtools:
     restart:
       enabled: false
@@ -110,9 +110,6 @@ jhipster:
       host: localhost
       port: 5000
       queue-size: 512
-  swagger:
-    enabled:
-      true
 # ===================================================================
 # Application specific properties
 # Add your own application properties here, see the ApplicationProperties class
